drag and drop products working correcly along with the jquery ajax póst request 📬📬📬📬📬

--- a/views/admin/products/add_product.hbs
+++ b/views/admin/products/add_product.hbs
@@ -65,7 +65,7 @@
                             <div class="card">
                                 <img src="/images/products/no image.jpg" id="new_pr_img" class="card-img-top" alt="sube una imagen">
                                 <div class="card-body">
-                                    <form action="/admin/add_product" method="POST" enctype="multipart/form-data">
+                                    <form action="/admin/add_product" id="form-prod" method="POST" enctype="multipart/form-data">
                                         <div class="pb-3">
                                             <label class="form-label w-100" for="image">Subir Imagen
                                                 <div id="drop-area">
