--- a/views/admin/products/edit_product.hbs
+++ b/views/admin/products/edit_product.hbs
@@ -65,7 +65,7 @@
                             <div class="card">
                                 <img src="{{product.img_dir}}" id="new_pr_img" class="card-img-top" alt="sube una imagen">
                                 <div class="card-body">
-                                    <form action="/admin/edit_product/{{product.id}}" method="POST" enctype="multipart/form-data">
+                                    <form action="/admin/edit_product/{{product.id}}" id="form-prod" method="POST" enctype="multipart/form-data">
                                         <div class="pb-3">
                                             <label class="form-label w-100" for="image">Cambiar Imagen
                                                 <div id="drop-area">
