--- a/views/admin/products/add_product.hbs
+++ b/views/admin/products/add_product.hbs
@@ -88,8 +88,10 @@
                                         </div>
                                         <div class="form-group pb-3 ">
                                             <label class="" for="">Precio</label>
-                                            <input type="text" name="price" class="form-control" placeholder="Precio" value="1"
-                                                min="1">
+                                            <div class="input-group mb-3">
+                                                <span class="input-group-text" id="basic-addon2">Bs</span>
+                                                <input type="number" name="price" class="form-control" placeholder="Precio" value="1" min="1">
+                                            </div>
                                             <!-- {{!-- <textarea name="description" rows="2" class="form-control"
                                                             placeholder="Description"></textarea> --}} -->
                                         </div>
