--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,7 +27,7 @@
             <div class="container-fluid container-heading">
                 
                 <!-- navbar -->
-                <nav class="navbar navbar-expand-lg navbar-dark mb-3">
+                <nav class="navbar navbar-expand-lg navbar-dark mb-3 postion-relative" style="z-index: 2">
                     <div class="container-fluid">
                         <a class="navbar-brand align-text-center" href="#title">
                             <div class="row">
@@ -87,7 +87,7 @@
                                         </ul>
                                     </div>
                                 {{else}}
-                                <a type="button" class="btn btn-outline-light catalog-btn mx-auto ms-md-0 ms-lg-2" href="/login">
+                                <a type="button" class="btn btn-outline-light catalog-btn mx-auto ms-md-0 ms-lg-2 " href="/login">
                                         <span class="ps-2 d-block"> Iniciar Sesion</span>
                                 </a>
                                 {{/if}}
