--- a/views/marketplace/product.hbs
+++ b/views/marketplace/product.hbs
@@ -93,14 +93,16 @@
                             {{#with product}}
                             <div class="col col-12 col-lg-6">
                                 <!-- <div class="row"> -->
-                                    <div class="col-12">
+                                <div class="col-12">
+                                    <div class="ratio ratio-4x3">
                                         <a href=""><img src="{{img_dir}}" class="card-img-top" alt="{{name}} - image"></a>
-                                        <div class="card-body">
                                     </div>
+                                    {{!-- <div class="card-body">
+                                    </div> --}}
                                     <div class="col-12">
                                         <img class="card-miniature pt-3" src="{{img_dir}}" alt="">
                                     <!-- </div> -->
-                                </div>
+                                    </div>
                                 </div>
                                 
                             </div>
