--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -101,6 +101,7 @@
                             {{/if}}
                             <div class="row">
                             {{#each products}}
+                                {{#unless isDeleted}}
                                 <div class="col col-12 col-md-6 col-xl-4 mb-2 mb-lg-4 mt-2 mt-lg-0">
                                     <div class="card h-100">
                                         <a href="/marketplace/product/{{id}}">
@@ -132,6 +133,8 @@
                                         </div>
                                     </div>
                                 </div>
+                                    
+                                {{/unless}}
                             {{/each}}
                             </div>
                         </div>
