--- a/views/marketplace/product.hbs
+++ b/views/marketplace/product.hbs
@@ -91,92 +91,102 @@
                         {{/if}}
                         <div class="row mb-5">
                             {{#with product}}
-                            <div class="col col-12 col-lg-6">
-                                <!-- <div class="row"> -->
-                                <div class="col-12">
-                                    <div class="ratio ratio-4x3">
-                                        <a href=""><img src="{{img_dir}}" class="card-img-top" alt="{{name}} - image"></a>
-                                    </div>
-                                    {{!-- <div class="card-body">
-                                    </div> --}}
+                                {{#unless isDeleted}}
+                                <div class="col col-12 col-lg-6">
+                                    <!-- <div class="row"> -->
                                     <div class="col-12">
-                                        <img class="card-miniature pt-3" src="{{img_dir}}" alt="">
-                                    <!-- </div> -->
+                                        <div class="ratio ratio-4x3">
+                                            <a href=""><img src="{{img_dir}}" class="card-img-top" alt="{{name}} - image"></a>
+                                        </div>
+                                        {{!-- <div class="card-body">
+                                        </div> --}}
+                                        <div class="col-12">
+                                            <img class="card-miniature pt-3" src="{{img_dir}}" alt="">
+                                        <!-- </div> -->
+                                        </div>
                                     </div>
+                                    
                                 </div>
-                                
-                            </div>
 
-                            <div class="col col-12 col-lg-6 ps-4 pt-3 pt-lg-1">
-                                <div class="row text-center text-lg-start">
-                                    <h3 class="card-title text-capitalize">{{name}}</h3>
-                                </div>     
-                                <hr>
-                                <div class="row ">
-                                    <p class="fw-semibold">Precio : 
-                                    </p>
-                                </div>
-                                <div class="row text-center text-lg-start pb-3">
-                                    <h4 class="card-text">
+                                <div class="col col-12 col-lg-6 ps-4 pt-3 pt-lg-1">
+                                    <div class="row text-center text-lg-start">
+                                        <h3 class="card-title text-capitalize">{{name}}</h3>
+                                    </div>     
+                                    <hr>
+                                    <div class="row ">
+                                        <p class="fw-semibold">Precio : 
+                                        </p>
+                                    </div>
+                                    <div class="row text-center text-lg-start pb-3">
+                                        <h4 class="card-text">
+                                            <span class="d-none d-lg-inline">
+                                            &#160;&#160;&#160;&#160;&#160;&#160;
+                                            </span>
+                                        {{price}} Bs.
+                                        </h4>
+                                    </div>
+                                    <div class="row ">
+                                        <p class="fw-semibold">Categorias : 
+                                        </p>
+                                    </div>
+                                    <div class="row text-center text-lg-start mb-3">
+                                        <span>
                                         <span class="d-none d-lg-inline">
                                         &#160;&#160;&#160;&#160;&#160;&#160;
                                         </span>
-                                    {{price}} Bs.
-                                    </h4>
-                                </div>
-                                <div class="row ">
-                                    <p class="fw-semibold">Categorias : 
+                                            {{#each ../p_categories}}
+                                                <span class="badge text-bg-light    ">{{name}}</span>                                         
+                                            {{/each}}
+                                        </span>
+                                    </div>
+
+                                    <p class="fw-semibold">Existencias:
                                     </p>
-                                </div>
-                                <div class="row text-center text-lg-start mb-3">
-                                    <span>
-                                    <span class="d-none d-lg-inline">
-                                    &#160;&#160;&#160;&#160;&#160;&#160;
-                                    </span>
-                                        {{#each ../p_categories}}
-                                            <span class="badge text-bg-light    ">{{name}}</span>                                         
-                                        {{/each}}
-                                    </span>
-                                </div>
-
-                                <p class="fw-semibold">Existencias:
-                                </p>
-                                <div class="row text-center text-lg-start mb-3">
-                                    <span>
-                                    <span class="d-none d-lg-inline">
-                                        &#160;&#160;&#160;&#160;&#160;&#160;
-                                    </span>
-                                        {{!-- display according to stock --}}
-                                        {{#if little_stock}}
-                                        <span class="text-warning"><i class="fa-solid fa-triangle-exclamation"></i> Pocas existencias</span>
-                                        {{else}}
-                                        {{#if stock}}<span class="text-success"><i class="fa-solid fa-check"></i> Hay existencias</span>{{/if}}
-                                        {{/if}}
-                                        {{#unless stock}}
-                                        <span class="text-danger"><i class="fa-solid fa-ban"></i> No hay existencias</span>
-                                        {{/unless}}
-                                    </span>
-                                </div>
-                                <form action="/marketplace/cart_shopping/add_product/{{id}}" method="POST" class="row g-3">
-                                    <div class="">
-                                        <label for="inputNumberQuantity" class="form-label fw-semibold">Cantidad:</label>
-
+                                    <div class="row text-center text-lg-start mb-3">
+                                        <span>
+                                        <span class="d-none d-lg-inline">
+                                            &#160;&#160;&#160;&#160;&#160;&#160;
+                                        </span>
+                                            {{!-- display according to stock --}}
+                                            {{#if little_stock}}
+                                            <span class="text-warning"><i class="fa-solid fa-triangle-exclamation"></i> Pocas existencias</span>
+                                            {{else}}
+                                            {{#if stock}}<span class="text-success"><i class="fa-solid fa-check"></i> Hay existencias</span>{{/if}}
+                                            {{/if}}
+                                            {{#unless stock}}
+                                            <span class="text-danger"><i class="fa-solid fa-ban"></i> No hay existencias</span>
+                                            {{/unless}}
+                                        </span>
                                     </div>
-                                    <div class="row ps-5 ps-lg-0 mb-3">
-                                        {{!-- <input type="number" class="form-control" id="inputNumberQuantity" value="1" min="1" max="50" name="quantity"> --}}
-                                        <div class="ps-0 ps-lg-5 input-group py-auto my-auto text-center mx-auto justify-content-center" bis_skin_checked="1">
-                                                <button style="min-width: 1rem" class="btn btn-decrement btn-outline-secondary px-sm-3" type="button" id="{{id}}" name="action" value="decrement"><strong>−</strong></button>
-                                                <input type="number" inputmode="decimal" min="1" max="50" id="i{{id}}" name="quantity" value="1" style="text-align: center; max-width: 4rem" class="form-control px-2 px-sm-2" placeholder="">
-                                                <button style="min-width: 1rem" class="btn btn-increment btn-outline-secondary px-sm-3" type="button" id="{{id}}" name="action" value="increment"><strong>+</strong></button>
+                                    <form action="/marketplace/cart_shopping/add_product/{{id}}" method="POST" class="row g-3">
+                                        <div class="">
+                                            <label for="inputNumberQuantity" class="form-label fw-semibold">Cantidad:</label>
+
                                         </div>
-                                    </div>
-                                    <div class="text-center">
-                                        <button type="submit" class="btn btn-primary" {{#unless stock}}disabled{{/unless}}><i class="fa-solid fa-cart-plus"></i>
-                                            <span>Añadir al carrito</span></button>
+                                        <div class="row ps-5 ps-lg-0 mb-3">
+                                            {{!-- <input type="number" class="form-control" id="inputNumberQuantity" value="1" min="1" max="50" name="quantity"> --}}
+                                            <div class="ps-0 ps-lg-5 input-group py-auto my-auto text-center mx-auto justify-content-center" bis_skin_checked="1">
+                                                    <button style="min-width: 1rem" class="btn btn-decrement btn-outline-secondary px-sm-3" type="button" id="{{id}}" name="action" value="decrement"><strong>−</strong></button>
+                                                    <input type="number" inputmode="decimal" min="1" max="50" id="i{{id}}" name="quantity" value="1" style="text-align: center; max-width: 4rem" class="form-control px-2 px-sm-2" placeholder="">
+                                                    <button style="min-width: 1rem" class="btn btn-increment btn-outline-secondary px-sm-3" type="button" id="{{id}}" name="action" value="increment"><strong>+</strong></button>
+                                            </div>
+                                        </div>
+                                        <div class="text-center">
+                                            <button type="submit" class="btn btn-primary" {{#unless stock}}disabled{{/unless}}><i class="fa-solid fa-cart-plus"></i>
+                                                <span>Añadir al carrito</span></button>
 
+                                        </div>
+                                    </form>    
+                                </div>
+                            {{else}}
+                                {{!-- content message --}}
+                                <div class="col-md-10 mx-auto text-center pt-5 pb-3 ">
+                                    <div class="card card-body">
+                                        <h3>Este producto fue eliminado </h2>
+                                        <a href="/marketplace"><h3>Volver a la tienda</h3></a>
                                     </div>
-                                </form>    
-                            </div>
+                                </div>    
+                            {{/unless}}
                             {{/with}}
                         </div>
                     </div>
