categories admin pages layout corrections

--- a/views/admin/products/add_category.hbs
+++ b/views/admin/products/add_category.hbs
@@ -20,7 +20,7 @@
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/8faedc4425.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="../css/styles_dashboard.css">
+    <link rel="stylesheet" href="/css/styles_dashboard.css">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
                                         </div>
                                         <div class="form-group pb-3">
                                             <label class="" for="">Descripción</label>
-                                            <textarea class="form-control" name="description" placeholder="Una breve despripción sobre que tipo de productos contendra esta categoría." id="exampleFormControlTextarea1" rows="3"></textarea>
+                                            <textarea class="form-control" name="description" placeholder="Una breve despripción sobre que tipo de productos contendra esta categoría." id="exampleFormControlTextarea1" rows="7"></textarea>
                                         </div>
                                         
                                         
