--- a/views/admin/products/categories.hbs
+++ b/views/admin/products/categories.hbs
@@ -91,8 +91,8 @@
                                     {{!-- <a class=" align-items-center" href="/admin/edit_category/{{id} }">
                                     </a> --}}
                                 </td>
-                                <td class="total align-middle fw-semi-bold text-1000">{{description}}</td>
-                                <td class="text-center"><a href="/admin/edit_category/{{id}}" type="button" class="btn btn-sm btn-primary"><i class="fa-regular fa-pen-to-square"></i> Editar</a></td>
+                                <td class="total align-middle fw-semi-bold text-1000" style="min-width: 300px">{{description}}</td>
+                                <td class="text-center text-nowrap align-middle"><a href="/admin/edit_category/{{id}}" type="button" class="btn btn-sm btn-primary"><i class="fa-regular fa-pen-to-square"></i> Editar</a></td>
                             </tr>
                             {{/each}}
                         </tbody>
