--- a/views/admin/products/edit_category.hbs
+++ b/views/admin/products/edit_category.hbs
@@ -58,7 +58,7 @@
                 {{/if}}
                 <div class="container py-2">
                     <div class="row">
-                        <div class="col-md-4 mx-auto">
+                        <div class="col col-10 col-sm-8 col-lg-6 col-xl-4  mx-auto">
                             <div class="card">
                                 <div class="card-body">
                                     <form action="/admin/edit_category/{{category.id}}" method="POST">
@@ -68,7 +68,7 @@
                                         </div>
                                         <div class="form-group pb-3">
                                             <label class="" for="">Descripción</label>
-                                            <textarea class="form-control" name="description" placeholder="Una breve despripción sobre que tipo de productos contendra esta categoría." id="exampleFormControlTextarea1" rows="3">{{category.description}}</textarea>
+                                            <textarea class="form-control" name="description" placeholder="Una breve despripción sobre que tipo de productos contendra esta categoría." id="exampleFormControlTextarea1" rows="7">{{category.description}}</textarea>
                                         </div>
                                         
                                         
