--- a/views/marketplace/product.hbs
+++ b/views/marketplace/product.hbs
@@ -92,29 +92,35 @@
                         <div class="row mb-5">
                             {{#with product}}
                                 {{#unless isDeleted}}
-                                <div class="col col-12 col-lg-6">
+                                <div class="col col-12 col-lg-7 px-0 px-md-3 py-3 py-md-0">
                                     <!-- <div class="row"> -->
-                                    <div class="col-12">
+                                    <div class="row">
                                         <div class="ratio ratio-4x3">
                                             <a href=""><img src="{{img_dir}}" class="card-img-top" alt="{{name}} - image"></a>
                                         </div>
                                         {{!-- <div class="card-body">
                                         </div> --}}
-                                        <div class="col-12">
-                                            <img class="card-miniature pt-3" src="{{img_dir}}" alt="">
+                                        <div class="row">
+                                            <div class="col col-3 px-0">
+                                                <div class="img-container ratio ratio-1x1">
+                                                    <img class="card- pt-3" src="{{img_dir}}" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="col">
+                                            </div>
                                         <!-- </div> -->
                                         </div>
                                     </div>
                                     
                                 </div>
 
-                                <div class="col col-12 col-lg-6 ps-4 pt-3 pt-lg-1">
+                                <div class="col col-12 col-lg-5 ps-4 pt-3 pt-lg-1">
                                     <div class="row text-center text-lg-start">
-                                        <h3 class="card-title text-capitalize">{{name}}</h3>
+                                        <h3 class="card-title text-capitalize fw-semibold">{{name}}</h3>
                                     </div>     
                                     <hr>
                                     <div class="row ">
-                                        <p class="fw-semibold">Precio : 
+                                        <p class="fw-">Precio : 
                                         </p>
                                     </div>
                                     <div class="row text-center text-lg-start pb-3">
@@ -126,7 +132,7 @@
                                         </h4>
                                     </div>
                                     <div class="row ">
-                                        <p class="fw-semibold">Categorias : 
+                                        <p class="fw-">Categorias : 
                                         </p>
                                     </div>
                                     <div class="row text-center text-lg-start mb-3">
@@ -140,7 +146,7 @@
                                         </span>
                                     </div>
 
-                                    <p class="fw-semibold">Existencias:
+                                    <p class="fw-">Existencias:
                                     </p>
                                     <div class="row text-center text-lg-start mb-3">
                                         <span>
@@ -160,7 +166,7 @@
                                     </div>
                                     <form action="/marketplace/cart_shopping/add_product/{{id}}" method="POST" class="row g-3">
                                         <div class="">
-                                            <label for="inputNumberQuantity" class="form-label fw-semibold">Cantidad:</label>
+                                            <label for="inputNumberQuantity" class="form-label ">Cantidad:</label>
 
                                         </div>
                                         <div class="row ps-5 ps-lg-0 mb-3">
@@ -188,6 +194,51 @@
                                 </div>    
                             {{/unless}}
                             {{/with}}
+                        </div>
+                        <div class="row mb-3">
+                            <h2>Descripción</h2>
+                            <hr>
+                            {{#each p_categories}}
+                                <p class="">{{description}}</p>                                         
+                            {{/each}}
+                        </div>
+                        <div class="row">
+                            <h2>Marcas Reconocidas</h2>
+                            <hr>
+                        </div>
+                        <div id="brands" class="row mb-5">
+                            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <div class="row">
+                                            <div class="col my-auto">
+                                                <div class="image-container"><img src="https://www.vernier.com/wp-content/uploads/2020/05/Arduino-Loop-logo.png" alt="" class="img-fluid"></div>
+                                            </div>
+                                            <div class="col align-middle my-auto">
+                                                <div class="image-container"><img src="https://a.pololu-files.com/picture/0J7078.200h.jpg" alt="" class="img-fluid"></div>
+                                            </div>
+                                            <div class="col d-none d-md-flex my-auto">
+                                                <div class="image-container"><img src="https://logowik.com/content/uploads/images/atmel2813.logowik.com.webp" alt="" class="img-fluid"></div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="carousel-item">
+                                        <div class="row">
+                                            <div class="col my-auto">
+                                                <div class="image-container"><img src="https://befreeyc.org.uk/wp-content/uploads/2021/03/RPi-Logo-Black-Landscape-PRINT-1.png" alt="" class="img-fluid"></div>
+                                            </div>
+                                            <div class="col my-auto">
+                                                <div class="image-container"><img src="https://center3dprint.com/image/cache/catalog/!_New_Brands/Creality-600x315w.jpg" alt="" class="img-fluid"></div>
+                                            </div>
+                                            <div class="col d-none d-md-flex my-auto">
+                                                <div class="image-container"><img src="https://lh3.googleusercontent.com/p/AF1QipME7ZX17WSpi34WZulrSo6JQ9Py8AHfLiazjZLi=s1280-p-no-v1" alt="" class="img-fluid"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
