--- a/views/admin/products/add_product.hbs
+++ b/views/admin/products/add_product.hbs
@@ -90,7 +90,7 @@
                                             <label class="" for="">Precio</label>
                                             <div class="input-group mb-3">
                                                 <span class="input-group-text" id="basic-addon2">Bs</span>
-                                                <input type="number" name="price" class="form-control" placeholder="Precio" value="1" min="1">
+                                                <input type="number" name="price" class="form-control" placeholder="Precio" value="1" step=".01" min="1">
                                             </div>
                                             <!-- {{!-- <textarea name="description" rows="2" class="form-control"
                                                             placeholder="Description"></textarea> --}} -->
