--- a/views/partials/marketplace/market_header.hbs
+++ b/views/partials/marketplace/market_header.hbs
@@ -1,8 +1,8 @@
 <section id="heading">
     <div class="container-fluid container-heading">
-        <div class="row mb-4 mx-3">
-            <div class="row text-center">
-                <h1 class="mb-0">Horarios de atención</h1>
+        <div class="row mb-4 ">
+            <div class="row ">
+                <h1 class="mb-0 fst-normal text-center text-md-start" style="font-weight: 100">Horarios de atención</h1>
             </div>
             <div class="px-2">
                 <hr class="border border-primary opacity-100 border-2 ">
