--- a/views/admin/clientsNcustomers/edit_client.hbs
+++ b/views/admin/clientsNcustomers/edit_client.hbs
@@ -162,7 +162,14 @@
                                     <td class="align-middle"><span class="badge bg-danger">Cancelado <i class="fa-solid fa-xmark"></i></span></td>
                                 {{/if}}
                                 <td class="date align-middle white-space-nowrap text-700 fs--1 text-nowrap">{{fecha_de_pedido}}</td>
-                                <td class="text-center"><a href="/admin/orders/details/{{id}}" type="button" class="btn btn-sm btn-primary text-nowrap"><i class="fa-regular fa-pen-to-square"></i> Editar</a></td>
+                                <td class="text-center"><a href="/admin/orders/details/{{id}}" type="button" class="btn btn-sm btn-primary text-nowrap">
+                                {{#if new}}
+                                    <i class="fa-solid fa-money-check"></i> Editar
+                                {{else}}
+                                    <i class="fa-solid fa-money-check"></i> Detalles
+                                {{/if}}
+                                </a>
+                                </td>
                             </tr>
                             {{/each}}
                         </tbody>
